jemalloc.Api/jemalloc.cs


            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_mallctlnametomib")]
            internal static extern int JeMallctlnametomib([MarshalAs(UnmanagedType.LPStr)] string name, ulong* mibp, ulong* miblenp);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_mallctlbymib")]
            internal static extern int JeMallctlbymib(ulong* mib, ulong miblen, global::System.IntPtr oldp, ulong* oldlenp, global::System.IntPtr newp, ulong newlen);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_malloc_stats_print")]
            internal static extern void JeMallocStatsPrint(global::System.IntPtr write_cb, global::System.IntPtr je_cbopaque, [MarshalAs(UnmanagedType.LPStr)] string opts);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="je_malloc_usable_size")]
            internal static extern ulong JeMallocUsableSize(global::System.IntPtr ptr);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, 
                EntryPoint = "je_set_malloc_conf", CharSet = CharSet.Ansi)]
            internal static extern void JeSetMallocConf(IntPtr ptr);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, 
                EntryPoint = "je_get_malloc_conf", CharSet = CharSet.Ansi)]
            internal static extern IntPtr JeGetMallocConf();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "je_get_malloc_message_ptr")]
            internal static extern global::System.IntPtr JeGetMallocMessagePtr();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("jemallocd", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl, EntryPoint = "je_set_malloc_message_ptr")]
            internal static extern void JeSetMallocMessagePtr(global::System.IntPtr p);
        }

        public static global::System.IntPtr Malloc(ulong size)
        {
            var __ret = __Internal.JeMalloc(size);
            return __ret;
        }

        public static global::System.IntPtr Calloc(ulong num, ulong size)
        {
            var __ret = __Internal.JeCalloc(num, size);
            return __ret;
        }

        public static int PosixMemalign(void** memptr, ulong alignment, ulong size)
        {
            var __ret = __Internal.JePosixMemalign(memptr, alignment, size);
            return __ret;
        }

        public static global::System.IntPtr AlignedAlloc(ulong alignment, ulong size)
        {
            var __ret = __Internal.JeAlignedAlloc(alignment, size);
            return __ret;
        }

        public static global::System.IntPtr Realloc(global::System.IntPtr ptr, ulong size)
        {
            var __ret = __Internal.JeRealloc(ptr, size);
            return __ret;
        }

        public static void Free(global::System.IntPtr ptr)
        {
            __Internal.JeFree(ptr);
        }

        public static global::System.IntPtr Mallocx(ulong size, int flags)
        {
            var __ret = __Internal.JeMallocx(size, flags);
            return __ret;
        }

        public static global::System.IntPtr Rallocx(global::System.IntPtr ptr, ulong size, int flags)
        {
            var __ret = __Internal.JeRallocx(ptr, size, flags);
            return __ret;
        }

        public static ulong Xallocx(global::System.IntPtr ptr, ulong size, ulong extra, int flags)
        {
            var __ret = __Internal.JeXallocx(ptr, size, extra, flags);
            return __ret;
        }

        public static ulong Sallocx(global::System.IntPtr ptr, int flags)
        {
            var __ret = __Internal.JeSallocx(ptr, flags);
            return __ret;
        }

        public static void Dallocx(global::System.IntPtr ptr, int flags)
        {
            __Internal.JeDallocx(ptr, flags);
        }

        public static void Sdallocx(global::System.IntPtr ptr, ulong size, int flags)
        {
            __Internal.JeSdallocx(ptr, size, flags);
        }

        public static ulong Nallocx(ulong size, int flags)
        {
            var __ret = __Internal.JeNallocx(size, flags);
            return __ret;
        }

        public static int Mallctl(string name, global::System.IntPtr oldp, ref ulong oldlenp, global::System.IntPtr newp, ulong newlen)
        {
            fixed (ulong* __refParamPtr2 = &oldlenp)
            {
                var __arg2 = __refParamPtr2;
                var __ret = __Internal.JeMallctl(name, oldp, __arg2, newp, newlen);
                return __ret;
            }
        }

        public static int Mallctlnametomib(string name, ref ulong mibp, ref ulong miblenp)
        {
            fixed (ulong* __refParamPtr1 = &mibp)
            {
                var __arg1 = __refParamPtr1;
                fixed (ulong* __refParamPtr2 = &miblenp)
                {
                    var __arg2 = __refParamPtr2;
                    var __ret = __Internal.JeMallctlnametomib(name, __arg1, __arg2);
                    return __ret;
                }
            }
        }

        public static int Mallctlbymib(ref ulong mib, ulong miblen, global::System.IntPtr oldp, ref ulong oldlenp, global::System.IntPtr newp, ulong newlen)
        {
            fixed (ulong* __refParamPtr0 = &mib)
            {
                var __arg0 = __refParamPtr0;
                fixed (ulong* __refParamPtr3 = &oldlenp)
                {
                    var __arg3 = __refParamPtr3;
                    var __ret = __Internal.JeMallctlbymib(__arg0, miblen, oldp, __arg3, newp, newlen);
                    return __ret;
                }
            }
        }

        public static void MallocStatsPrint(global::jemalloc.Delegates.Action_IntPtr_string write_cb, global::System.IntPtr je_cbopaque, string opts)
        {
            var __arg0 = write_cb == null ? global::System.IntPtr.Zero : Marshal.GetFunctionPointerForDelegate(write_cb);
            __Internal.JeMallocStatsPrint(__arg0, je_cbopaque, opts);
        }

        public static ulong MallocUsableSize(global::System.IntPtr ptr)
        {
            var __ret = __Internal.JeMallocUsableSize(ptr);
            return __ret;
        }

        public static string MallocConf
        {
            get
            {
                return Marshal.PtrToStringAnsi(__Internal.JeGetMallocConf());
            }
            set
            {
                __Internal.JeSetMallocConf(Marshal.StringToHGlobalAnsi(value));
            }
        }

        
        public static global::jemalloc.JeMallocMessagePtr MallocMessage
        {
            get
            {
                var __ret = __Internal.JeGetMallocMessagePtr();
                var __ptr0 = __ret;
                return __ptr0 == IntPtr.Zero ? null : (global::jemalloc.JeMallocMessagePtr)Marshal.GetDelegateForFunctionPointer(__ptr0, typeof(global::jemalloc.JeMallocMessagePtr));
            }

            set
            {
                IntPtr __ptr = __Internal.JeGetMallocMessagePtr();
                __ptr = value == null ? global::System.IntPtr.Zero : Marshal.GetFunctionPointerForDelegate(value);
            }
        }
        
        public static int MallCtl(string name)
        {
            IntPtr retp = Marshal.AllocHGlobal(sizeof(int));
            ulong size = sizeof(int);
            Mallctl("opt.narenas", retp, ref size, IntPtr.Zero, 0);
            int ret = Marshal.ReadInt32(retp);
            Marshal.FreeHGlobal(retp);
            return ret;   
        }
    }

    
    namespace Delegates
    {
        [SuppressUnmanagedCodeSecurity, UnmanagedFunctionPointer(global::System.Runtime.InteropServices.CallingConvention.Cdecl)]
        public unsafe delegate void Action_IntPtr_string(global::System.IntPtr _0, [MarshalAs(UnmanagedType.LPStr)] string _1);
    }
    
}
